fix scroll visible when no necessary

--- a/apps/smokex_web/assets/css/app.scss
+++ b/apps/smokex_web/assets/css/app.scss
@@ -202,5 +202,5 @@ div.not-found > img {
 
 .box-row-result-code-block-inner {
   max-height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
